<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.john.bookstore.MainActivity">
    <item
        android:id="@+id/histroy"
        android:title="@string/history"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/bookmark"
        android:title="@string/bookmark"
        android:visible="false"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/order_rating"
        android:title="@string/order_rating"
        app:showAsAction="never" />
    <item
        android:id="@+id/order_pricing"
        android:title="@string/order_pricing"
        app:showAsAction="never" />
    <item
        android:id="@+id/order_publising"
        android:title="@string/order_published"
        app:showAsAction="never" />

    <item
        android:id="@+id/deleteAll"
        android:title="@string/delete_all"
        android:visible="false"
        app:showAsAction="never" />
</menu>