<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/BooksFragment">

    <fragment
        android:id="@+id/BooksFragment"
        android:name="com.john.bookstore.booklist.BooksFragment"
        android:label="@string/bookmark"
        tools:layout="@layout/fragment_books">

        <action
            android:id="@+id/action_BooksFragment_to_NewBooksFragment"
            app:destination="@id/NewBooksFragment" />
        <action
            android:id="@+id/action_BooksFragment_to_detailBookFragment"
            app:destination="@id/detailBookFragment" />
    </fragment>
    <fragment
        android:id="@+id/NewBooksFragment"
        android:name="com.john.bookstore.newbook.NewBooksFragment"
        android:label="@string/new_books"
        tools:layout="@layout/fragment_newbooks">
        <action
            android:id="@+id/action_NewBooksFragment_to_detailBookFragment"
            app:destination="@id/detailBookFragment" />
        <action
            android:id="@+id/action_NewBooksFragment_to_bookSearchFragment"
            app:destination="@id/bookSearchFragment" />
    </fragment>
    <fragment
        android:id="@+id/detailBookFragment"
        android:name="com.john.bookstore.detailbook.DetailBookFragment"
        android:label="@string/book_info"
        tools:layout="@layout/fragment_detail_book">

        <argument
            android:name="isbn13"
            app:argType="string" />
    </fragment>
    <fragment
        android:id="@+id/bookSearchFragment"
        android:name="com.john.bookstore.search.BookSearchFragment"
        android:label="@string/search_book">
        <action
            android:id="@+id/action_bookSearchFragment_to_detailBookFragment"
            app:destination="@id/detailBookFragment" />
    </fragment>
</navigation>